fix: 编译错误修复 — Java 11兼容 + 泛型 + 导入